--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongoose": "^5.10.15",
     "path": "^0.12.7",
     "tailwindcss": "^1.9.6"
   }
