--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.15",
+    "nodemailer": "^6.4.16",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7"
   }
 }
